--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,10 @@ body {
     margin     : 20px;
 }
 
+.card {
+    min-width: 100%;
+}
+
 h2 {
     color: #333;
 }
@@ -22,5 +26,32 @@ button:hover {
 textarea#result {
     width      : 95%;
     padding    : 10px;
+    min-height: 100px;
     font-family: monospace;
+}
+.table-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    gap: 20px; 
+    padding: 10px; 
+}
+
+.grid-item {
+    border: 1px solid #ccc; 
+    padding: 10px; 
+    background-color: #f9f9f9; 
+}
+
+.table-header {
+    font-weight: bold; 
+    
+}
+
+
+
+.table-input {
+    width: 70%; 
+    padding: 5px;
+    margin: 0 auto;
+    display: block; 
 }
