--- a/static/styles.css
+++ b/static/styles.css
@@ -62,3 +62,10 @@ textarea#result {
 .is-invalid {
     border-color: #dc3545;
 }
+
+.row-container {
+    display        : flex;
+    flex-direction : row;
+    align-items    : center;
+    justify-content: center;
+}
